# OpenGLFPS

./: .gitignore  CMakeLists.txt  CMakeLists.txt.txt  Dependencies.cmake  Main.cpp  PolaroidFilter.aps  PolaroidFilter.vcxproj  PolaroidFilter.vcxproj.filters  README.md  blur.fs  cameraController.cpp  cameraController.h  imgui.ini  light_caster.fs  resource.h  shader.cpp  shader.h
App/: CMakeLists.txt  cmake_install.cmake  main.cpp
App/game/: gameLayer.cpp  gameLayer.h
App/world/: entity.cpp  entity.h  gameObject.h  gems.h  level.h  tiles.h
App/worldDraw/: levelRenderer.cpp  levelRenderer.h  levelVisuals.h
Libraries/include/glm/: .editorconfig
animation/: animation.h  animator.h  model_animation.h
assets/levels/: level.txt
assets/resources/objects/anime_girl/: readme.txt
assets/resources/objects/gems/source/: gems.mtl
assets/shaders/: bloom_final.fs  light_caster.fs  light_caster.vs  quad.vs
camera/: camera.h
core/: CMakeLists.txt  cmake_install.cmake  window.cpp  window.h
core/animation/: animation.h  animator.h  model_animation.h
core/application/: application.cpp  application.h  inputEvents.h  layer.h  window.cpp  window.h  windowEvents.h
core/camera/: camera.h  cameraController.cpp  cameraController.h
core/gl/: material.cpp  material.h  mesh.h  model.cpp  model.h  rawModel.h  renderParams.h  shader.h  shaderManager.cpp  shaderManager.h  texture2d.h  texturedModel.h  vertexArray.h
core/renderer/: entityRenderer.cpp  entityRenderer.h  frameBuffer.h
geometry/: cube.cpp  cube.h
gl/: buffer.h  mesh.cpp  mesh.h  model.h  texture2d.h  vertexArray.h
input/: callbacks.cpp  callbacks.h
renderer/: drawCommand.h  levelRenderer.cpp  levelRenderer.h  levelVisuals.h
shapes/: Cube.h
world/: level.cpp  level.h  player.h
